# Chess-engine-2

./: .gitignore  CMakeLists.txt  README.md  requirements.txt  run.sh
src/bindings/: bindings.cpp
src/py/: gui.py  main.py
